Fix group membership table formatting
# The container had the scroll in the wrong place, and didn't look like the
# other lists on the page. This, whilst not nice code, makes it look the
# same as the others. Also add punctuation and a message if you are in no
# groups.

--- a/scss/_account-settings.scss
+++ b/scss/_account-settings.scss
@@ -155,11 +155,10 @@
 	}
 
 	.my-groups-table-section {
-		max-height:300px; 
-		overflow-y: auto;
 		table {
-			width:100%;
-			border-collapse:collapse;
+			width: 100%;
+			border-collapse: collapse;
+			margin-bottom: 0px;
 			th{
 				background-color: $ru_darkgrey;
 				color:#fff;
@@ -177,6 +176,16 @@
 					font-weight:bold;
 					font-size: 1rem;
 				}
+			}
+		}
+		.my-groups-table-row-container {
+			max-height: 300px; 
+			overflow-y: auto;
+			margin-bottom: 1.25rem;
+		    border: #e3e3e3 1px solid;
+		    border-top: 0;
+			table {
+				border: none;
 			}
 		}
 	}
